# plugin-tutor

./: CMakeLists.txt  README.md
app_0/: app_0.cpp
app_1/: app_1.cpp
app_2/: app_2.cpp
app_3/: app_3.cpp
app_4/: app_4.cpp
include/: common.h
plugin_2/: plugin_2.cpp
plugin_3/: plugin_3.cpp
plugin_4/: plugin_4.cpp
sdk_3/: sdk_3.cpp  sdk_3.h
sdk_4/: sdk_4.cpp  sdk_4.h
